--- a/css/style.css
+++ b/css/style.css
@@ -34,11 +34,11 @@ a:hover {
 	color:#2a85Da; 
 }
 
-h2 {
+#content h2 {
 	margin-top:50px;
 }
 
-h2 a {
+#content h2 a {
 	padding-top:60px;
 }
 
@@ -132,6 +132,7 @@ li a {
 	transition: all .3s; 
 	-moz-transition: all .3s; 
 	-webkit-transition: all .3s; 
+	vertical-align: middle;
 }
 li a:hover { 
 	background-color:rgba(255,255,255,.2); 
@@ -153,13 +154,13 @@ li a img {
 	margin:15px 0;
 
 }
-#map { 
+#mapid { 
 	width:100%; 
 	height:300px; 
 	height:60vh;
 	margin:0 auto;
 }
-#map a { 
+#mapid a { 
 	color:initial; 
 }
 canvas { 
